Fix minor issues